--- a/CPW0/acm-sigplan-proc/acmart-sigplanproc-template.tex
+++ b/CPW0/acm-sigplan-proc/acmart-sigplanproc-template.tex
@@ -1,10 +1,12 @@
-\documentclass[sigplan, review]{acmart}\settopmatter{printfolios=true,printccs=false,printacmref=false}
+\documentclass[sigplan]{acmart}\settopmatter{printfolios=true,printccs=false,printacmref=false}
 
 \acmConference[NCSU, FALL 2018]{CSC512 - Compiler Construction}{October 18, 2018}{Raleigh, NC, USA}
 \acmYear{2018}
 \acmISBN{} % \acmISBN{978-x-xxxx-xxxx-x/YY/MM}
 \acmDOI{} % \acmDOI{10.1145/nnnnnnn.nnnnnnn}
 \startPage{1}
+%\renewcommand{\baselinestretch}{1.00} 
+
 
 \setcopyright{none}
 
